# native/api/src/openapi.rs
@@ -59,6 +59,7 @@ use utoipa::{Modify, OpenApi};
         crate::server::api_install_plugin_dev,
         crate::server::api_set_plugin_enabled,
         crate::server::api_update_plugin_settings,
+        crate::server::api_plugin_auth,
         crate::server::api_uninstall_plugin,
         crate::server::api_ignore_plugin_retry,
         crate::server::api_market_list,
@@ -171,6 +172,7 @@ mod tests {
             routes::API_PLUGINS_INSTALL_DEV,
             routes::API_PLUGIN_ENABLED,
             routes::API_PLUGIN_SETTINGS,
+            routes::API_PLUGIN_AUTH,
             routes::API_PLUGIN,
             routes::API_TASK_IGNORE_PLUGIN_RETRY,
             routes::API_MARKET,
